--- a/PHP3/one/login.html
+++ b/PHP3/one/login.html
@@ -5,9 +5,13 @@
     <title>用户登录</title>
 </head>
 <body>
+<!-- 登录表单 -->
 <form method="post" action="login.php">
+  <!-- 用户名输入框 -->
   用户名：<input type="text" name="user"><br>
+  <!-- 密码输入框 -->
   密  码：<input type="password" name="pwd">
+  <!-- 提交按钮 -->
   <input type="submit" value="登录">
 </form>
 </body>
